fix(entityDetails): give section a z-index of toolbar - 1
Because it was drawn above toolbar dropdowns

--- a/src/styles/components/entityDetails/__entityDetails.sass
+++ b/src/styles/components/entityDetails/__entityDetails.sass
@@ -57,7 +57,7 @@ $entityDetailsHeight: 20rem
 .entityDetails
     background-color: $uni-color-negative
     position: absolute
-    z-index: map-get($zindex, 'toolbar')
+    z-index: #{map-get($zindex, toolbar) - 1}
     left: 0
     right: 0
     top: 7.15rem
